# TauZip

./: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: compression.rs  context_menu.rs  file_utils.rs  gui.rs  main.rs
