[package]
name = "TauZip"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-cli = "2.0"
tauri-plugin-shell = "2.0"
# Compression libraries
flate2 = "1.0"
brotli = "3.0"
bzip2 = "0.4"
tar = "0.4"
zip = "0.6"

# GUI framework
tauri = { version = "2.3.0" }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
raw-window-handle = "0.6.2"
# Optional RAR support
unrar = { version = "0.5", optional = true }
libc = "0.2"

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.60"
features = [
  "Win32_System_Threading",
  "Win32_System_DataExchange",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
   "Win32_Foundation",
	"Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_System_Environment",
    "Win32_System_Memory",
]

[features]
default = []
rar-support = ["unrar"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }
